# sdl2test

./: .gitignore  CMakeLists.txt  README.md  build_linux.sh
src/: defs.h  init.c  init.h  main.c
